--- a/links/manada.html
+++ b/links/manada.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
 	<link rel="stylesheet" type="text/css" href="../styles/styleramas.css">
-	<link rel="icon" type="image/png" href="../img/LogoFamilia.png">
-	<title>Familia Soro</title>
+	<link rel="icon" type="image/png" href="../img/LogoManada.png">
+	<title>Manada Maori</title>
 </head>
 <body id="body" onload="start()">
 	<header>
@@ -49,43 +49,75 @@
 				</div>
 			</div>
 			<div class="verticalcontainer">
-				<p class="titulomayor">Familia de Cachorros Soro</p>
-				<p class="subtitulomayor">¡Tras la huella de un sueño!</p>
+				<h1 class="titulomayor">Manada de Lobatos Maori</h1>
+				<h2 class="subtitulomayor">¡Manantial de pureza y verdad!</h2>
 				<div class="presentacion">
 					<div class="logosection">
-						<img src="../img/LogoFamilia.png" class="header_logo" alt="Logo de la familia Soro 371">
+						<img src="../img/LogoManada.png" class="header_logo" alt="Logo de la manada Maori 371">
 					</div>
 					<div class="basico">
-						<p><strong>Grito:</strong> Amigos</p>
-						<p><strong>Lema:</strong> Tras la huella de un sueño.</p>
-						<p>Niños y niñas entre los 5 y 7 años</p>
-						<p><strong>Marco simbólico:</strong> Fantasía(Gnomos y Hadas)</p>
+						<p><strong>Grito:</strong> Mejor</p>
+						<p><strong>Lema:</strong> Manantial de pureza y verdad.</p>
+						<p>Niños y niñas entre los 7 y 11 años</p>
+						<p><strong>Marco simbólico:</strong> Fantasía(Libro de la Selva)</p>
 					</div>
 				</div>
-				<h2 class="title">Camadas</h2>
+				<h2 class="title">Seisenas</h2>
 				<div class="unidades">
-					<div class="unidadiv" onclick="unidades(1)">
-						<div class="unidad" style="background-image: url('../img/LogoFamilia.png'); background-size: cover; background-position: 0px;">
+					<div class="unidadiv" onclick="unidades(11)">
+						<div class="unidad" style="background-image: url('../img/lobogris.jpg'); background-size: cover; background-position: 0px 0px;">
 						</div>
-						<p>Conejitos</p>
+						<p>Gris</p>
 					</div>
-					<div class="unidadiv" onclick="unidades(2)">
-						<div class="unidad" style="background-image: url('../img/LogoFamilia.png'); background-size: cover; background-position: 0px;">
+					<div class="unidadiv" onclick="unidades(12)">
+						<div class="unidad" style="background-image: url('../img/loboartico.jpg'); background-size: cover; background-position: -32px;">
 						</div>
-						<p>Gatitos</p>
+						<p>Blanca</p>
 					</div>
-					<div class="unidadiv" onclick="unidades(3)">
-						<div class="unidad" style="background-image: url('../img/LogoFamilia.png'); background-size: cover; background-position: 0px;">
+					<div class="unidadiv" onclick="unidades(13)">
+						<div class="unidad" style="background-image: url('../img/lobocafe.jpg'); background-size: 120%; background-position: -16px;">
 						</div>
-						<p>Ardillitas</p>
+						<p>Café</p>
+					</div>
+					<div class="unidadiv" onclick="unidades(14)">
+						<div class="unidad" style="background-image: url('../img/loborojo.jpg'); background-size: 600%; background-position: -200px -105px;">
+						</div>
+						<p>Roja</p>
+					</div>
+					<div class="unidadiv" onclick="unidades(15)">
+						<div class="unidad" style="background-image: url('../img/lobonegro.jpg'); background-size: 200%; background-position: -70px -55px;">
+						</div>
+						<p>Negra</p>
 					</div>
 				</div>
 				<div class="historia">
-					<p>“Cachorros Soro” viene del nombre que reciben los halcones cuando aún no han mudado su primera pluma, llamados halcones Soro. De la misma manera que para nosotros, los cachorros, son los futuros scouts, que están creciendo y aprendiendo para ser parte del grupo. Por esta razón se decidió nombrar así a nuestras familia de cachorros.<p>
+					<p>“Manda Maorí” vienen del nombre de una especie de halcón endémica de Nueva Zelanda Halcón Maorí, representan una etapa del crecimiento del halcón donde estan aprendiendo a volar. Así como nuestros lobatos empiezan a aprender poco a poco la filosofía escultista.<p>
 
-					<p>Normalmente la jefe que los dirige se llama Raksha, la formación que usan al momento de formar en grupo tiene forma de el círculo al la mano izquierda del Jefe de grupo, es cubierta por los Webelos y su jefe debe ir al centro. Los cachorros saludan con dos dedos pegados, esto como símbolo de que sus ojos y oídos aún no se han abierto, una etapa común en los cachorros de lobo en la naturaleza.</p>
+					<p>Los jefes de la manada reciben nombres 6 personajes del Libro de la selva: Akela, Baloo, Kaa, Bagheera, Sherkan y Darzee y cada uno representa una destreza que explicaremos más adelante. La formación principal de la manada se llama círculo de Seeonee, se ubica a la mano derecha del jefe de grupo y es cubierta por los webelos. Su saludo es con dos dedos abiertos, representado que sus ojos y oídos siempre están atentos al viejo lobo, y simbolizan la etapa de cuando el lobezno es lo suficientemente grande para andar libremente pero siempre al pendiente de lo que diga su madre.</p>
 
-					<p>Dentro de la familia de cachorros, existen pequeños equipos llamados camadas, conformados por 3 cachorros, y son llamados como animales con diminutivos por ejemplo: Ardillitas, conejitos, perritos, entre otros. Sus adelantos consisten  en insignias en forma de rombos  con 5 colores, amarillo, violeta, rojo, verde y azul formando una estrella y se cosen en la manga izquierda de la camisa , su insignia mayor es el Gnomo dorado. El cuaderno que llevan tiene de nombre pegotero y se decora con pedazos de papel de colores, además, lo cachorros decoran una gran sabana, donde se plasma la historia fantástica que viven.</p>
+					<p>La manada se divide por equipos llamados Seisenas, son conformados por 6 lobatos de los cuales uno es el seisenero y otro el subseisenero, las seisenas tienen nombres de colores que representan los colores del pelaje de los lobos en la vida real siendo: Amarillo, Rojo, Negro, Blanco y Gris. Sus adelantos se basan en huellas, que llevan el nombre de los jefes y cada huella se gana conforme a las habilidades a las que se habían hecho alusión anteriormente y que son:</p>
+					<ul>
+						<li><p><strong>Huella de Baloo:</strong> Ley de la manada, conocimiento.</p></li>
+						<li><p><strong>Huella de Bagheera:</strong> Agilidad y deporte.</p></li>
+						<li><p><strong>Huella de Kaa:</strong> Naturaleza y ecología.</p></li>
+						<li><p><strong>Huella de Darzee:</strong> Arte y cultura.</p></li>
+						<li><p><strong>Huella de Sherkan:</strong> Técnica Scout.</p></li>
+						<li><p><strong>Huella de Akela:</strong> Campismo y liderazgo.</p></li>
+					</ul>
+					<p>Las huellas no tienen un orden específico  para ser ganadas con excepción de la insignia de aceptación de Akela que debe ser la primera y la Huella de Akela que debe ser la última, todas las insignias juntas forman un círculo y debe pegarse en la zona frontal superior izquierda de la camisa, su insignia mayor es el Lobo rampante. El cuaderno que se usa en la manada lleva de nombre Cuaderno de caza, cuando se reúne el Concejo de la roca,maxima autoridad en la manada, los lobatos deben posicionarse en la posición de gran clamor, en estas ceremonias pueden ser premiados, castigados, o bautizados con nombres de personajes del Libro de la selva.</p>
+					<h3>Ley de la Manada</h3>
+					<ol>
+						<li><p>El lobato escucha y obedece al viejo lobo.</p></li>
+						<li><p>El lobato se vence a sí mismo</p></li>
+					</ol>
+					<h3>Máximas del Lobato</h3>
+					<ol>
+						<li><p>El lobato piensa primero en los demás</p></li>
+						<li><p>El lobato siempre tiene los ojos y oído abiertos </p></li>
+						<li><p>El lobato es pulcro y ordenado</p></li>
+						<li><p>El lobato es alegre</p></li>
+						<li><p>El lobato es siempre es honesto</p></li>
+					</ol>
 				</div>
 				<div class="patronoracion">
 					<div class="patrono">
@@ -93,11 +125,13 @@
 						<h2>San Francisco de Asís</h2>
 					</div>
 					<div class="oracion">
-							<h2>Oración del Cachorro</h2>
+							<h2>Oración del Lobato</h2>
 						<p>Oh dulce y buen señor mío,<br>
-							enséñame a cuidar los bosques que me dan vida,<br>
-							a ser buenos con mi familia<br>
-							y a amarte cada día más.<br>
+							enséñame a ser humilde y bondadoso,<br>
+							a imitar tu ejemplo,<br>
+							a amarte con todo mi corazón<br>
+							y a seguir el buen camino<br>
+							que me ha de llevar al cielo junto a ti,<br>
 							San Fransisco de Asis,<br>
 							<i>Rogad por todos los cachorros y lobatos del mundo.</i>
 						</p>
@@ -134,9 +168,9 @@
 	<footer>
 		<div class="containerfooter">
 			<div class="redes">
-				<div><a href="https://www.facebook.com/GRUPO-SCOUT-Halcones-371-111963980512375" target="_blank">
+				<div><a href="https://www.facebook.com/halcones.halcones.12914" target="_blank">
 					<img src="../img/facebook.png" class="redsocial">
-					<p>GRUPO SCOUT Halcones 371</p>
+					<p>SCOUT Halcones</p>
 				</a></div>
 				<div><a href="https://www.instagram.com/gruposcouthalcones371/" target="_blank">
 					<img src="../img/instagram.png" class="redsocial">
@@ -146,9 +180,9 @@
 					<img src="../img/twitter.png" class="redsocial">
 					<p>@Halcones371</p>
 				</a></div>
-				<div><a href="https://www.facebook.com/halcones.halcones.12914" target="_blank">
+				<div><a href="https://www.youtube.com/channel/UCTkobvoVgtZoQFiA0rLRP7Q?view_as=subscriber" target="_blank">
 					<img src="../img/youtube.png" class="redsocial">
-					<p>Scout Halcones</p>
+					<p>Grupo Scout Halcones 371</p>
 				</a></div>
 			</div>
 			<div class="contactenos">
