--- a/links/familia.html
+++ b/links/familia.html
@@ -65,17 +65,17 @@
 				<h2 class="title">Camadas</h2>
 				<div class="unidades">
 					<div class="unidadiv" onclick="unidades(1)">
-						<div class="unidad" style="background-image: url('../img/LogoFamilia.png'); background-size: cover; background-position: 0px;">
+						<div class="unidad" style="background-image: url('../img/conejito.jpg'); background-size: cover; background-position: 0px;">
 						</div>
 						<p>Conejitos</p>
 					</div>
 					<div class="unidadiv" onclick="unidades(2)">
-						<div class="unidad" style="background-image: url('../img/LogoFamilia.png'); background-size: cover; background-position: 0px;">
+						<div class="unidad" style="background-image: url('../img/gatito.jpg'); background-size: cover; background-position: 0px;">
 						</div>
 						<p>Gatitos</p>
 					</div>
 					<div class="unidadiv" onclick="unidades(3)">
-						<div class="unidad" style="background-image: url('../img/LogoFamilia.png'); background-size: cover; background-position: 0px;">
+						<div class="unidad" style="background-image: url('../img/ardillita.jpg'); background-size: cover; background-position: 5px;">
 						</div>
 						<p>Ardillitas</p>
 					</div>
