--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 						<li><a href="./links/mision.html">Misión y Visión</a></li>
 						<li><a href="#">Ramas y/o Unidades</a>
 							<ul>
-								<li><a href="./familia.html">Familia</a></li>
-								<li><a href="./manada.html">Manada</a></li>
-								<li><a href="./aldea.html">Aldea</a></li>
-								<li><a href="./tropa.html">Tropa</a></li>
-								<li><a href="./clan.html">Clan</a></li>
+								<li><a href="./links/familia.html">Familia</a></li>
+								<li><a href="./links/manada.html">Manada</a></li>
+								<li><a href="./links/aldea.html">Aldea</a></li>
+								<li><a href="./links/tropa.html">Tropa</a></li>
+								<li><a href="./links/clan.html">Clan</a></li>
 							</ul>
 						</li>
 						<li><a href="#">Fotos y Videos</a></li>
@@ -211,9 +211,9 @@
 	<footer>
 		<div class="containerfooter">
 			<div class="redes">
-				<div><a href="https://www.facebook.com/GRUPO-SCOUT-Halcones-371-111963980512375" target="_blank">
+				<div><a href="https://www.facebook.com/halcones.halcones.12914" target="_blank">
 					<img src="./img/facebook.png" class="redsocial">
-					<p>GRUPO SCOUT Halcones 371</p>
+					<p>SCOUT Halcones</p>
 				</a></div>
 				<div><a href="https://www.instagram.com/gruposcouthalcones371/" target="_blank">
 					<img src="./img/instagram.png" class="redsocial">
