--- a/links/familia.html
+++ b/links/familia.html
@@ -134,9 +134,9 @@
 	<footer>
 		<div class="containerfooter">
 			<div class="redes">
-				<div><a href="https://www.facebook.com/GRUPO-SCOUT-Halcones-371-111963980512375" target="_blank">
+				<div><a href="https://www.facebook.com/halcones.halcones.12914" target="_blank">
 					<img src="../img/facebook.png" class="redsocial">
-					<p>GRUPO SCOUT Halcones 371</p>
+					<p>SCOUT Halcones</p>
 				</a></div>
 				<div><a href="https://www.instagram.com/gruposcouthalcones371/" target="_blank">
 					<img src="../img/instagram.png" class="redsocial">
