--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<li><a href="./links/clan.html">Clan</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Fotos y Videos</a></li>
+						<li><a href="https://www.facebook.com/halcones.halcones.12914/photos_albums" target="_blank">Fotos y Videos</a></li>
 					</ul>
 				</li>
 				<li><a href="#">Escultismo</a>
