--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
 	<link rel="stylesheet" type="text/css" href="./styles/styleindex.css">
+	<link rel="stylesheet" type="text/css" href="./styles/stylegeneral.css">
 	<link rel="icon" type="image/png" href="./img/flordelis.png">
 	<title>Prueba Halcones</title>
 </head>
