--- a/links/manada.html
+++ b/links/manada.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
 	<link rel="stylesheet" type="text/css" href="../styles/styleramas.css">
+	<link rel="stylesheet" type="text/css" href="../styles/stylegeneral.css">
 	<link rel="icon" type="image/png" href="../img/LogoManada.png">
 	<title>Manada Maori</title>
 </head>
@@ -49,7 +50,9 @@
 				</div>
 			</div>
 			<div class="verticalcontainer">
-				<h1 class="titulomayor">Manada de Lobatos Maori</h1>
+				<div class="switcher">
+					<span><button class="cambio" onclick="window.location='./familia.html'">Familia</button></span><span><h1 class="titulomayor">Manada de Lobatos Maori</h1></span><span><button class="cambio" onclick="window.location='./aldea.html'">Aldea</button></span>
+				</div>
 				<h2 class="subtitulomayor">¡Manantial de pureza y verdad!</h2>
 				<div class="presentacion">
 					<div class="logosection">
@@ -64,27 +67,27 @@
 				</div>
 				<h2 class="title">Seisenas</h2>
 				<div class="unidades">
-					<div class="unidadiv" onclick="unidades(11)">
+					<div class="unidadiv" onclick="unidades(11)"><!-- unidades(11) -->
 						<div class="unidad" style="background-image: url('../img/lobogris.jpg'); background-size: cover; background-position: 0px 0px;">
 						</div>
 						<p>Gris</p>
 					</div>
-					<div class="unidadiv" onclick="unidades(12)">
+					<div class="unidadiv" onclick="unidades(12)"><!-- unidades(12) -->
 						<div class="unidad" style="background-image: url('../img/loboartico.jpg'); background-size: cover; background-position: -32px;">
 						</div>
 						<p>Blanca</p>
 					</div>
-					<div class="unidadiv" onclick="unidades(13)">
+					<div class="unidadiv" onclick="unidades(13)"><!-- unidades(13) -->
 						<div class="unidad" style="background-image: url('../img/lobocafe.jpg'); background-size: 120%; background-position: -16px;">
 						</div>
 						<p>Café</p>
 					</div>
-					<div class="unidadiv" onclick="unidades(14)">
-						<div class="unidad" style="background-image: url('../img/loborojo.jpg'); background-size: 600%; background-position: -200px -105px;">
+					<div class="unidadiv" onclick="unidades(14)"><!-- unidades(14) -->
+						<div class="unidad" style="background-image: url('../img/loboamarillo.jpg'); background-size: 500%; background-position: -250px -105px;">
 						</div>
-						<p>Roja</p>
+						<p>Amarilla</p>
 					</div>
-					<div class="unidadiv" onclick="unidades(15)">
+					<div class="unidadiv" onclick="unidades(15)"><!-- unidades(15) -->
 						<div class="unidad" style="background-image: url('../img/lobonegro.jpg'); background-size: 200%; background-position: -70px -55px;">
 						</div>
 						<p>Negra</p>
