--- a/links/aldea.html
+++ b/links/aldea.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
 	<link rel="stylesheet" type="text/css" href="../styles/styleramas.css">
+	<link rel="stylesheet" type="text/css" href="../styles/stylegeneral.css">
 	<link rel="icon" type="image/png" href="../img/LogoAldea.png">
 	<title>Aldea Yággar</title>
 </head>
@@ -49,7 +50,9 @@
 				</div>
 			</div>
 			<div class="verticalcontainer">
-				<h1 class="titulomayor">Aldea de Webelos Yággar</h1>
+				<div class="switcher">
+					<span><button class="cambio" onclick="window.location='./manada.html'">Manada</button></span><span><h1 class="titulomayor">Aldea de Webelos Yággar</h1></span><span><button class="cambio" onclick="window.location='./tropa.html'">Tropa</button></span>
+				</div>
 				<h2 class="subtitulomayor">¡En busca de leyendas y tesoros escondidos!</h2>
 				<div class="presentacion">
 					<div class="logosection">
