--- a/links/historia.html
+++ b/links/historia.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
 	<link rel="stylesheet" type="text/css" href="../styles/stylehistoria.css">
+	<link rel="stylesheet" type="text/css" href="../styles/stylegeneral.css">
 	<link rel="icon" type="image/png" href="../img/flordelis.png">
 	<title>Prueba Historia</title>
 </head>
@@ -82,12 +83,12 @@
 					<p>Al grupo se le bautizó con el nombre de Halcones 371, en primer lugar porque era el animal preferido de Cristina Granados (Hermana de la Jefe Natalia Granados) y también porque al investigar sobre dicha ave, se encontró que Colombia es denominado “El país de las aves”, en el departamento del Valle del Cauca se avistan cerca de 1500 especies de aves, entre ellas cerca de 75 especies corresponden a halcones. El Halcón se conoce como “el ave del Rey” o “ave noble”, pues sirvió como apoyo para la cacería en la época medieval por su valentía. Los Halcones defienden con empeño sus nidos, siendo esta función típica de la Jefatura Scout, que protegen sus crías a capa y espada y porque es un animal muy LEAL. Los diseños y logos del Grupo fueron creados por el Jefe Oliverio Gómez (q.e.p.d.) y la Jefe Natalia Granados.</p>
 
 					<h2 id="ramas">Nuestras Ramas</h2>
-					<p>Las ramas encontradas en el Grupo Scout Halcones 371 son: <a href="" class="familia">Familia</a>, <a href="" class="manada">Manada</a>, <a href="" class="aldea">Aldea</a>, <a href="" class="tropa">Tropa</a>, <a href="" class="clan">Clan</a> y <a href="" class="jefatura">Jefatura</a>, cada una de ellas ha sido bautizada con el nombre de una especie de halcón. La Familia de cachorros fue bautizada como “Soro” (Halcón emplumado); la Manada de Lobatos fue bautizada como “Maori” (Halcón perseverante); la Aldea de Webelos fue bautizada como “Yággar” (Halcón leal); La Tropa de Scouts fue bautizada como “Macagua” (Halcón cazador); El Clan de Rovers fue bautizada como “Peregrino” (Halcón solitario); finalmente, la Jefatura fue bautizada como “Falcon” (Familia de Halcones).</p>
+					<p>Las ramas encontradas en el Grupo Scout Halcones 371 son: <a href="./familia.html" class="familia">Familia</a>, <a href="./manada.html" class="manada">Manada</a>, <a href="./aldea.html" class="aldea">Aldea</a>, <a href="./tropa.html" class="tropa">Tropa</a>, <a href="./clan.html" class="clan">Clan</a> y <a href="#" class="jefatura">Jefatura</a>, cada una de ellas ha sido bautizada con el nombre de una especie de halcón. La Familia de cachorros fue bautizada como “Soro” (Halcón emplumado); la Manada de Lobatos fue bautizada como “Maori” (Halcón perseverante); la Aldea de Webelos fue bautizada como “Yággar” (Halcón leal); La Tropa de Scouts fue bautizada como “Macagua” (Halcón cazador); El Clan de Rovers fue bautizada como “Peregrino” (Halcón solitario); finalmente, la Jefatura fue bautizada como “Falcon” (Familia de Halcones).</p>
 
 					<h2 id="pañoleta">La Pañoleta</h2>
 					<p>La pañoleta del Grupo, que lo identifica a nivel mundial, tiene un fondo <span class="jefatura">verde oliva</span>, que representa nuestros campos en donde se siembra la semilla del escultismo y se ve reflejado en la Jefatura; en el borde de la pañoleta se encuentran cintas de color rojo, azul, amarillo y verde, que representan el color de cada rama; próximo al extremo central de la pañoleta se encuentra bordado en hilos dorados el nombre “HALCONES 371”, denotando con ese hilo dorado que el Grupo es un Tesoro muy preciado, los números significan: 3: los principios y las virtudes scout, 7:  número de Dios, los días de la creación y 1: los mejores, siempre los primeros y la excelencia.</p>
 					<h3 class="tropa">El Verde:</h3><p>
-						Es la semilla del escultismo, el verde de la naturaleza y es representado por nuestros scouts (troperos) quienes son la columna vertebral del grupo.
+						Es la semilla del escultismo, el verde de la naturaleza y es representado por nuestros scouts (troperos) quienes son la columna vertebral del grupo y la esperanza de un mundo mejor.
 					</p>
 					<h3 class="familia">El Amarillo:</h3><p>
 						Es la luz del sol y las estrellas que iluminan nuestro camino y lo representan nuestros Cachorros y Lobatos.
@@ -99,7 +100,7 @@
 						Es el fuego de nuestro espíritu de servicio, el fruto rojo del escultismo que fue sembrado y es representado por nuestros Rovers.
 					</p>
 					<p>
-						La razón del orden de las cintas al extremo de la pañoleta (<span class="tropa">verde</span>, <span class="familia">amarillo</span>, <span class="aldea">azul</span> y <span class="clan">rojo</span>) se debe a que la tropa(verde) y el clan(rojo) son los hermanos mayores del grupo, por ende, los protectores de sus hermanos menores cachorros y lobatos(amarillos) y webelos(azul) además de ser scouts colombianos y tener el orden de nuestro pabellón nacional.
+						La razón del orden de las cintas al extremo de la pañoleta de adentro hacia afuera (<span class="tropa">verde</span>, <span class="familia">amarillo</span>, <span class="aldea">azul</span> y <span class="clan">rojo</span>) se debe a que la tropa (verde) y el clan (rojo) son los hermanos mayores del grupo, por ende, los protectores de sus hermanos menores cachorros y lobatos (amarillos) y webelos (azules) además de ser scouts colombianos y tener el orden de nuestro pabellón nacional.
 					</p>
 				</div>
 				<section>
@@ -121,13 +122,13 @@
 					<p>El primer campamento del grupo fue llamado Brownsea, se realizó en la finca pachamama lastimosamente no se realizó en la isla homónima, pero la idea es la misma. Fue un campamento lluvioso, tanto, que no se pudo hacer fogata, muchos padres que acompañaron en la actividad estuvieron a punto de irse por las condiciones climáticas, pero al final todo salió como se esperaba.</p>
 
 					<h2 id="sede">Sede Actual</h2>
-					<p>El siguiente gran paso de nuestro grupo fue la independización de la asociación y la renovación de sede de la tercera brigada a el parque La alquería Mayapán. Todo empezó el 26 de junio del 2012, el campamento Hidalgo, es considerado el primer campamento del grupo Halcones 371 como independientes.</p>
+					<p>El siguiente gran paso de nuestro grupo fue la independización de la asociación y la renovación de sede de la tercera brigada al parque La alquería Mayapán. Todo empezó el 26 de junio del 2012, el campamento Hidalgo, es considerado el primer campamento del grupo Halcones 371 como scouts independientes.</p>
 				</div>
 				<!-- Aki va el google maps -->
 				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d995.7154591949923!2d-76.54135411234708!3d3.3839121011471005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaf42d016b952ce34!2sParque%20de%20La%20Alqueria!5e0!3m2!1ses!2sco!4v1592537270867!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0; border-radius: 5px; box-shadow: 0 2px 8px black;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				<div class="historia">
 					<h2 id="ECS">¡Vamos al ECS!</h2>
-					<p>Para el año 2015 una pequeña delegación del grupo participó en el Encuentro de Culturas Scout (ECS) en Amalfi, los años posteriores 2016 y 2017 participamos en los ECS de coveñas y Guatapé como grupo, siempre destacamos por nuestra alegría y buen trabajo como grupo. Hoy somos una gran familia y esperamos seguir creciendo para llevar el escultismo a muchas vidas.  
+					<p>Para el año 2015 una pequeña delegación del grupo participó en el Encuentro de Culturas Scout (ECS) en Amalfi, los años posteriores 2016 y 2017 participamos en los ECS de Coveñas y Guatapé como grupo, siempre destacamos por nuestra alegría y buen trabajo como grupo. Hoy somos una gran familia y esperamos seguir creciendo para llevar el escultismo a muchas vidas.
 					</p>
 				</div>
 			</div>
