--- a/links/lobos.html
+++ b/links/lobos.html
@@ -58,7 +58,7 @@
 				<h2 class="subtitulomayor">¡Fuertes, Ágiles y Veloces!</h2>
 				<div class="presentacion">
 					<div class="logosection">
-						<img src="../img/lobolobos.jpg" class="header_logo" alt="imagen de un puma">
+						<img src="../img/lobolobos.jpg" class="header_logo" alt="imagen de un lobo">
 					</div>
 					<div class="basico">
 						<p><strong>Grito:</strong> ¡Auuuuuu!</p>
@@ -71,7 +71,7 @@
 						<img src="../img/banderinlobos.jpeg" alt="imagen del banderin de la patrulla lobos" class="banderin">
 					</div>
 					<div class="basico">
-						<p><strong>Banderin de la Patrulla Pumas</strong></p>
+						<p><strong>Banderin de la Patrulla Lobos</strong></p>
 					</div>
 				</div>
 				<div class="integrantes">
