--- a/index.html
+++ b/index.html
@@ -129,16 +129,12 @@
 								<img src="./img/CampamentoNoche.png" class="imgeve">
 							</div>
 							<div class="eventext">
-								<h2>Campamento de Grupo Virtual</h2>
+								<h2>Campamento Virtual Rampante</h2>
 								<dialog id="modal2" class="modal" close>
 									<div class="modalcontent">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-											tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-											quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-											consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-											cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-											proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+											Campamento por el 10° cumpleaños del grupo Halcones 371 realizado los días 26-27 de Junio del 2020.
+											El nombre Rampante es debido a que es nuestra última etapa como Lobatos y corresponde al nombre de la insignia mayor de los lobatos <i>"Lobo Rampante"</i>, Prepárense para el PRIMER CAMPAMENTO VIRTUAL DEL GRUPO.
 										</p>
 									</div>
 									<button class="cm" id="cmodal2">x</button>
@@ -147,56 +143,9 @@
 								<p class="acargo">Jefatura</p>
 							</div>
 						</div>
-						<!-- <div class="event">
-							<div>
-								<img src="./img/LogoAldea.png" class="imgeve">
-							</div>
-							<div class="eventext">
-								<h2>Título</h2>
-								<dialog id="modal3" class="modal">
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-									</p>
-									<button class="cm" id="cmodal3">x</button>
-								</dialog>
-								<button class="button om" id="omodal3">Leer Más</button>
-								<p class="acargo">Calito</p>
-							</div>
-						</div>
-						<div class="event">
-							<div>
-								<img src="./img/LogoManada.png" class="imgeve">
-							</div>
-							<div class="eventext">
-								<h2>Título</h2>
-								<dialog id="modal4" class="modal">
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-										tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-										consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-										cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-										proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-									</p>
-									<button id="cmodal4" class="cm">x</button>
-								</dialog>
-								<button id="omodal4" class="button om">Leer más</button>
-								<p class="acargo">Calito</p>
-							</div>
-						</div> -->
 					</div>
 				</section>
+				<h3 class="title">Calendario de Eventos</h3>
 				<section>
 					<div class="calendar">
 						<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%230B8043&amp;ctz=America%2FBogota&amp;src=anVsaWFucGVkcm96YWdhcmNpYUBnbWFpbC5jb20&amp;src=ZXMuY28jaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%237986CB&amp;color=%230B8043&amp;showTz=1&amp;title=My%20Google%20Calendar%20Test&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=0" class="calendariogoogle"></iframe>
