--- a/links/aldea.html
+++ b/links/aldea.html
@@ -149,7 +149,9 @@
 							gracias señor<br>
 							porque hiciste que un hermano scout<br>
 							a través de bosques, montañas y senderos<br>
-							nos estuviese guiando por un buen camino.<br>
+							nos estuviese guiando por un buen camino,<br>
+							grande eres señor,<br>
+							porque hiciste que todos sirviéramos para algo.<br>
 							San Ignacio de Loyola<br>
 							<i>Rogad por todos los cachorros y lobatos del mundo.</i>
 						</p>
