--- a/links/pumas.html
+++ b/links/pumas.html
@@ -96,7 +96,7 @@
 						<details><summary>Listado</summary>
 							<ul>
 								<li><p class="integrante">Prempeh Jenny ramos</p></li>
-								<li><p class="integrante">Mónica serna</p></li>
+								<li><p class="integrante">Mónica Serna</p></li>
 								<li><p class="integrante">Búho Daiyan Quintero</p></li>
 								<li><p class="integrante">Camaleón Nathali Guzman</p></li>
 								<li><p class="integrante">María José Puentes</p></li>
@@ -167,7 +167,7 @@
 								</li>
 								<li><p class="guia">Araña Isabella Sánchez Parra </p>
 									<ul>
-										<li><p class="sub">Mono Titi Hari Valeria Vélez López</p></li>
+										<li><p class="sub">Mono Tití Hari Valeria Vélez López</p></li>
 										<li><p class="sub">Pantera Laura Daniela Fernández Jiménez</p></li>
 									</ul>
 								</li>
