--- a/links/tibery.html
+++ b/links/tibery.html
@@ -103,8 +103,8 @@
 								<li><p class="integrante">Cobra Camilo Astudillo</p></li>
 								<li><p class="integrante">Mono Juan Ramírez</p></li>
 								<li><p class="integrante">Murciélago Alexander Chamorro</p></li>
-								<li><p class="integrante">Delfín Kenny Stiven Montezuma Barragán</p></li>
-								<li><p class="integrante">Gorila Julián Castillo</p></li>
+								<li><p class="integrante">Delfín Sabio Kenny Stiven Montezuma Barragán</p></li>
+								<li><p class="integrante">Gorila Ágil Julián Castillo</p></li>
 								<li><p class="integrante">Stiven</p></li>
 								<li><p class="integrante">Águila Juan Camilo García Becerra</p></li>
 								<li><p class="integrante">Felipe Rodríguez</p></li>
