--- a/links/historia.html
+++ b/links/historia.html
@@ -120,7 +120,11 @@
 
 					<h2 id="campuno">Campamento N° 1</h2>
 					<p>El primer campamento del grupo fue llamado Brownsea, se realizó en la finca pachamama lastimosamente no se realizó en la isla homónima, pero la idea es la misma. Fue un campamento lluvioso, tanto, que no se pudo hacer fogata, muchos padres que acompañaron en la actividad estuvieron a punto de irse por las condiciones climáticas, pero al final todo salió como se esperaba.</p>
-
+				</div>
+				<section>
+					<img src="../img/FondoHistoria.jpg" alt="Imagen del primer campamento del grupo" class="imagen">
+				</section>
+				<div class="historia">
 					<h2 id="sede">Sede Actual</h2>
 					<p>El siguiente gran paso de nuestro grupo fue la independización de la asociación y la renovación de sede de la tercera brigada al parque La alquería Mayapán. Todo empezó el 26 de junio del 2012, el campamento Hidalgo, es considerado el primer campamento del grupo Halcones 371 como scouts independientes.</p>
 				</div>
