--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
+	<meta property="og:title" content="Scouts Halcones 371">
+	<meta property="og:description" content="grupos scout halcones 371 niñ@s con un estilo de vida">
+	<meta name="twitter:title" content="Scouts Halcones 371">
+	<meta name="twitter:description" content="grupos scout halcones 371 niñ@s con un estilo de vida">
 	<link rel="stylesheet" type="text/css" href="./styles/styleindex.css">
 	<link rel="stylesheet" type="text/css" href="./styles/stylegeneral.css">
 	<link rel="icon" type="image/png" href="./img/flordelis.png">
