--- a/links/historiascout.html
+++ b/links/historiascout.html
@@ -74,7 +74,7 @@
 					<p>El escultismo (del inglés scouting, que significa explorar) es un movimiento infantil y juvenil que busca educar a niños y jóvenes, con base en valores y juegos al aire libre como método de enseñanza no formal, que actualmente está presente en 165 países y territorios, con aproximadamente 40.000.000 de miembros en todo el mundo, agrupados en distintas organizaciones.</p>
 					<div class="img">
 						<section>
-							<img class="imagen" src="../img/scouts.jpg" alt="Imagen de Scouts explorando">
+							<img class="imagen" src="../img/scouts.JPG" alt="Imagen de Scouts explorando">
 						</section>
 					</div>
 					<p>El Movimiento Scout nació como una manera de combatir la delincuencia en la Inglaterra de principios del siglo xx, buscando el desarrollo físico, espiritual y mental de los jóvenes para que llegaran a ser «buenos ciudadanos» a través de un método específico inspirado en la vida militar y al aire libre cuyas directrices serían establecidas en el manual Escultismo para muchachos (1908), del General británico Robert Stephenson Smith Baden-Powell of Gilwell, que en 1909 fue nombrado caballero y recibió el título de sir, pasando a ser en 1929 lord Baden-Powell, I barón de Gilwell.</p>
