--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
 	<meta property="og:title" content="prueba Grupo Scout Halcones 371">
+	<meta property="og:site_name" content="prueba Grupo Scout Halcones 371">
 	<meta property="og:description" content="grupo scout halcones 371 niñ@s con un estilo de vida">
 	<link rel="stylesheet" type="text/css" href="./styles/styleindex.css">
 	<link rel="stylesheet" type="text/css" href="./styles/stylegeneral.css">
