--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
-	<meta property="og:title" content="prueba Grupo Scout Halcones 371">
-	<meta property="og:site_name" content="prueba Grupo Scout Halcones 371">
+	<meta property="og:title" content="Grupo Scout Halcones 371">
+	<meta property="og:site_name" content="Grupo Scout Halcones 371">
+	<meta property="og:url" content="https://anzaiagithub.github.io/prueba/index.html">
 	<meta property="og:description" content="grupo scout halcones 371 niñ@s con un estilo de vida">
 	<link rel="stylesheet" type="text/css" href="./styles/styleindex.css">
 	<link rel="stylesheet" type="text/css" href="./styles/stylegeneral.css">
