--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
-	<meta property="og:title" content="Grupo Scout Halcones 371">
-	<meta property="og:site_name" content="Grupo Scout Halcones 371">
+	<meta name="title" content="Página Oficial de pruebas del Grupo Scout Halcones 371">
+	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371">
+	<meta property="og:title" content="Oficial Grupo Scout Halcones 371">
+	<meta property="og:site_name" content="Oficial Grupo Scout Halcones 371">
 	<meta property="og:url" content="https://anzaiagithub.github.io/prueba/index.html">
 	<meta property="og:description" content="grupo scout halcones 371 niñ@s con un estilo de vida">
 	<link rel="stylesheet" type="text/css" href="./styles/styleindex.css">
