--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="title" content="Página Oficial de pruebas del Grupo Scout Halcones 371">
+	<meta name="title" content="Scouts en la Alqueria 371">
 	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371">
 	<meta property="og:title" content="Oficial Grupo Scout Halcones 371">
 	<meta property="og:site_name" content="Oficial Grupo Scout Halcones 371">
