--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="title" content="Scouts en la Alqueria 371">
-	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371">
-	<meta property="og:title" content="Oficial Grupo Scout Halcones 371">
-	<meta property="og:site_name" content="Oficial Grupo Scout Halcones 371">
+	<meta name="description" content="Página Oficial de pruebas del Grupo Scout Halcones 371.">
+	<meta property="og:title" content="Grupo Scout Halcones 371">
+	<meta property="og:site_name" content="Grupo Scout Halcones 371">
 	<meta property="og:url" content="https://anzaiagithub.github.io/prueba/index.html">
 	<meta property="og:description" content="grupo scout halcones 371 niñ@s con un estilo de vida">
 	<link rel="stylesheet" type="text/css" href="./styles/styleindex.css">
@@ -123,9 +122,9 @@
 											 
 												<p>La Aldea Yaggar elaborará 3 artículos indígenas, para los 3 ganadores, los cuales serán entregados a domicilio en fechas que se acordarán con cada participante. Los artículos serán “sorpresa”.</p>
 										</div>
-									<button class="cm" id="cmodal1">x</button>
+									<button class="cm" onclick="cm(1)">x</button>
 								</dialog>
-								<button class="button om" id="omodal1">Leer Más</button>
+								<button class="button om" onclick="om(1)">Leer Más</button>
 								<p class="acargo">Aldea Yaggar</p>
 							</div>
 						</div>
@@ -142,9 +141,9 @@
 											El nombre Rampante es debido a que es nuestra última etapa como Lobatos y corresponde al nombre de la insignia mayor de los lobatos <i>"Lobo Rampante"</i>, Prepárense para el PRIMER CAMPAMENTO VIRTUAL DEL GRUPO.
 										</p>
 									</div>
-									<button class="cm" id="cmodal2">x</button>
+									<button class="cm" onclick="cm(2)">x</button>
 								</dialog>
-								<button class="button om" id="omodal2">Leer más</button>
+								<button class="button om" onclick="om(2)">Leer más</button>
 								<p class="acargo">Jefatura</p>
 							</div>
 						</div>
