--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<div class="eventext">
 								<h2>Falcon's Got Talent</h2>
 								<p>Concurso de talentos organizado por la Aldea Yaggar para el grupo.</p>
-								<dialog id="modal1" class="modal" close>
+								<div id="modal1" class="modal">
 									<div class="modalcontent">
 									<h4>JUSTIFICACIÓN</h4>
 	 
@@ -123,7 +123,7 @@
 												<p>La Aldea Yaggar elaborará 3 artículos indígenas, para los 3 ganadores, los cuales serán entregados a domicilio en fechas que se acordarán con cada participante. Los artículos serán “sorpresa”.</p>
 										</div>
 									<button class="cm" onclick="cm(1)">x</button>
-								</dialog>
+								</div>
 								<button class="button om" onclick="om(1)">Leer Más</button>
 								<p class="acargo">Aldea Yaggar</p>
 							</div>
@@ -134,7 +134,7 @@
 							</div>
 							<div class="eventext">
 								<h2>Campamento Virtual Rampante</h2>
-								<dialog id="modal2" class="modal" close>
+								<div id="modal2" class="modal">
 									<div class="modalcontent">
 										<p>
 											Campamento por el 10° cumpleaños del grupo Halcones 371 realizado los días 26-27 de Junio del 2020.
@@ -142,7 +142,7 @@
 										</p>
 									</div>
 									<button class="cm" onclick="cm(2)">x</button>
-								</dialog>
+								</div>
 								<button class="button om" onclick="om(2)">Leer más</button>
 								<p class="acargo">Jefatura</p>
 							</div>
